"ChangeLog"

2009-05-28	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-20:
	  configure.ac: date bump


2009-04-29	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-17:
	  Ported to g++-4.4.
	  config/cxx_STL.m4: check for copy_if
	  configure.ac: use it


2009-03-08	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-06-merged-footprint-02-05:
	  Branch merge of footprint rework.


2009-02-22	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-02:
	  configure.ac: generate src/{hacguile,hacchpsimguile}
		installed wrapper scripts, replacing binaries.
	  config/guile.m4: now use and allow override of GUILE
		variable (--with-guile), and find GUILE_PATH as well.
	  Former libguile optional dependency is now replaced
		with the guile (binary) executable because
		HAC facilities are independently loadable plug-ins now.


2009-02-19	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-01:
	  config/rl_el.m4: also check for readline/readline.h for editline,
		check for symbols rl_completion_matches and completion_matches.
	  configure.ac: date bump


2009-01-31	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-96-merged-prsim-13-03:
	  Branch merge: node/rule attributes for hacprsim.
	  configure.ac: date bump


2009-01-31	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-92-merged-prsim-12-09:
	  Merged prsim tracing branch.
	  configure.ac: date bump


2008-12-04	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-71+:
	  configure.ac: check for tr
	  Make.stddef: use tr to convert spaces to newlines
	  fixed a few test dependencies


2008-12-01	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-70:
	  config/lexyacc.m4, README: warn against flex 2.5.35 :(


2008-11-27	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-66: