@@ -36,8 +36,13 @@ BEGIN {
 	} else {
 		reverse = strtonum(reverse);
 	}
+	if (!length(debug)) {
+		debug = 0;
+	} else {
+		debug = strtonum(debug);
+	}
 	print "// vi: syntax=verilog";	# :)
-	print "// This file is automatically generated by wrap_verilog_modules_to_hacprsim.awk.";
+	print "// This file is automatically generated by wrap_verilog_modules_to_hacprsim.awk, maintained by David Fang.";
 	print "";
 }
 
@@ -64,16 +69,19 @@ function parse_replace(st) {
 }
 
 # checks state of stack
-function parse_expect(st) {
+# tok is optional current token
+function parse_expect(st, tok) {
 	if (parse_stack[parse_stack_ptr] != st) {
 		parse_error("expected to be in state \"" st \
-			"\" but got \"" parse_stack[parse_stack_ptr] "\".");
+			"\" but got \"" parse_stack[parse_stack_ptr] "\".\n" \
+			"current token [:" NR "]: " tok);
 	}
 }
 
 function assert_token(tok, str) {
 	if (tok != str) {
-		parse_error("expected token \"" tok "\" but got \"" str "\".");
+		parse_error("expected token \"" tok "\" but got \"" str "\"" \
+			"at [:" NR "].");
 	}
 }
 
@@ -94,6 +102,7 @@ function tokenize(str) {
 
 function reset_globals() {
 	type_name = "";
+	param_index = 0;
 	port_index = 0;
 	# clear the associative arrays
 	# delete ports;		# not POSIX
@@ -102,6 +111,17 @@ function reset_globals() {
 	}
 	for (p in ordered_ports) {
 		delete ordered_ports[p];
+	}
+	for (p in ordered_params) {
+		delete ordered_params[p];
+	}
+	for (p in param_default_values) {
+		delete param_default_values[p];
+	}
+	for (p in dimensions) {
+		delete upper[p];
+		delete lower[p];
+		delete dimensions[p];
 	}
 }
 
@@ -130,8 +150,39 @@ if (tok == "[") {
 	} else if (tok == ")" || (tok == "," && in_port)) {
 		# yuck: context dependent handling of comma
 		parse_pop();
-		parse_expect("ports-list");
+		parse_expect("ports-list", tok);
 	} # else ignore
+	} else {
+		parse_pop();
+	}
+}
+}
+
+# parse: parameter foo = ..., bar = ..., ... ;
+function keep_parameter(tok) {
+if (tok == "[") {
+	parse_push("expect-range-first");
+} else {
+	if (tok != ";") {
+	if (tok != ",") {
+	if (tok != "=") {
+		# this may be parsed directly in the module-ports
+		ordered_params[param_index] = tok;
+		param_index++;
+		if (length(range_first) && length(range_second)) {
+			upper[tok] = range_first;
+			lower[tok] = range_second;
+			dimensions[tok] = "[" range_first ":" range_second "]";
+		}
+	} else {		# with default value
+		rvalue = "";	# global variable:
+		parse_replace("param-default-value");
+	}
+	} else if (tok == ",") {
+		# yuck: context dependent handling of comma
+		parse_pop();
+		parse_expect("param-list", tok);
+	} # else ignore:  = ...
 	} else {
 		parse_pop();
 	}
@@ -141,7 +192,7 @@ if (tok == "[") {
 # where the parsing happens...
 function parse_it(tok, 
 	# local vars
-	state) {
+	state, tmp) {
 state = parse_stack[parse_stack_ptr];
 if (state == "top") {
 	# expect module
@@ -197,18 +248,22 @@ if (state == "top") {
 		parse_push("output-list");
 	} else if (tok == "inout") {
 		parse_push("inout-list");
+	} else if (tok == "parameter") {
+		parse_push("param-list");
 	} else if (tok == "reg") {
 		parse_push("ignore-to-semicolon");
 	} else if (tok == "initial" || tok == "#") {
 		parse_push("ignore-block");
 	} else if (tok == "specify") {
 		parse_push("ignore-specify");
+	} else if (tok == "function") {
+		parse_push("ignore-function");
 	} else if (tok == "endmodule") {
 		parse_pop();
-		parse_expect("module");
+		parse_expect("module", tok);
 		parse_pop();
 		write_out_wrapper();
-		parse_expect("top");
+		parse_expect("top", tok);
 	}
 } else if (state == "expect-range-first") {
 	range_first = tok;
@@ -228,6 +283,22 @@ if (state == "top") {
 	set_port_dir(tok, "out");
 } else if (state == "inout-list") {
 	set_port_dir(tok, "inout");
+} else if (state == "param-list") {
+	keep_parameter(tok);
+} else if (state == "param-default-value") {
+	tmp = ordered_params[param_index-1];	# current param
+	# rvalue is global variable
+	if (tok == ",") {
+		parse_replace("param-list");
+		param_default_values[tmp] = rvalue;
+		rvalue = "";
+	} else if (tok == ";") {
+		param_default_values[tmp] = rvalue;
+		rvalue = "";
+		parse_pop();
+	} else {
+		rvalue = rvalue tok;	# accumulate global var
+	}
 } else if (state == "ignore-block") {
 	if (tok == "begin") {
 		parse_replace("ignore-to-end");
@@ -238,8 +309,20 @@ if (state == "top") {
 	if (tok == "endspecify") {
 		parse_pop();
 	}
+} else if (state == "ignore-function") {
+	if (tok == "endfunction") {
+		parse_pop();
+	}
+} else if (state == "ignore-to-comma") {
+	if (tok == ",") {
+		parse_pop();
+	} # else ignore
 } else if (state == "ignore-to-semicolon") {
 	if (tok == ";") {
+		parse_pop();
+	} # else ignore
+} else if (state == "ignore-to-comma-or-semicolon") {
+	if (tok == ";" || tok == ",") {
 		parse_pop();
 	} # else ignore
 } else if (state == "ignore-to-end") {
@@ -251,22 +334,37 @@ if (state == "top") {
 }
 }
 
+# just wrap name in quotes
+function enquote_mem_ref(name) {
+	return "\"." name "\"";
+}
+
+function verilog_strcat2(s1, s2) {
+	return "{" s1 ", " s2 "}";
+}
+
 function emit_from_prsim(name) {
-	return "$from_prsim({prsim_name, \"." name \
-		"\"}, {verilog_name, \"." name "\"});";
+	return "$from_prsim(" verilog_strcat2("prsim_name", name) \
+		", " verilog_strcat2("verilog_name", name) ");";
 }
 
 function emit_to_prsim(name) {
-	return "$to_prsim({verilog_name, \"." name \
-		"\"}, {prsim_name, \"." name "\"});";
+	return "$to_prsim(" verilog_strcat2("verilog_name", name) \
+		", " verilog_strcat2("prsim_name", name) ");";
 }
 
 # emit wrapper function
 # no parameters, variables are only local
-function write_out_wrapper(tmp, u, l, n) {
+function write_out_wrapper(tmp, u, l, n, type, dim, endl) {
 	print "module " wrapper_prefix "_" type_name (wrapper_ports ? " (" : ";");
 	print "// need not be reg with acc: wn:*";
 	# might as well preserve original port order
+	for (i=0; i<param_index; ++i) {
+		p = ordered_params[i];
+		tmp = param_default_values[p];
+		print "\tparameter " p (length(tmp) ? " = " tmp : "") ";";
+		# preserve RHS values and expressions
+	}
 	for (i=0; i<port_index; ++i) {
 		p = ordered_ports[i];
 		type = (wrapper_ports ? ports[p] "put" : "wire");
@@ -279,9 +377,23 @@ function write_out_wrapper(tmp, u, l, n) {
 		print ");";	# end of ports list
 	}
 	print "\tparameter prsim_name=\"\";";
-	print "\treg [" max_strlen "*8:1] verilog_name;";
+	print "\tinteger i;";
+	print "\treg [" max_strlen "*8:1] verilog_name, tmp;";
+	# tmp is just local var for string manip
 if (!reverse) {
-	print "\t" type_name " dummy (";
+	printf("\t" type_name);
+	if (param_index) {
+		printf(" #(");
+	for (i=0; i<param_index; ++i) {
+		tmp = ordered_params[i];
+		printf(tmp (i+1 < param_index ? ", " : ""));
+	}
+		print ")";
+		printf("\t");
+	} else {
+		printf(" ");
+	}
+	print "dummy (";
 	# order matters for port fowarding
 	for (i=0; i<port_index; ++i) {
 		print "\t\t" ordered_ports[i] (i+1 < port_index ? "," : "");
@@ -302,23 +414,33 @@ for (p in ports) {
 	if (match(type, "in")) {
 		good = 1;
 	if (length(u) && length(l)) {
-	for ( ; l<=u; ++l) {
-		n = p "[" l "]";
-		print "\t" (reverse ? emit_to_prsim(n) : emit_from_prsim(n));
-	}
+#	for ( ; l<=u; ++l) {
+#		n = p "[" l "]";
+#		print "\t" (reverse ? emit_to_prsim(n) : emit_from_prsim(n));
+#	}
+	print "\tfor (i=" l "; i<=" u "; i=i+1) begin";
+		print "\t\t$sformat(tmp, \"." p "[%d]\", i);"
+		print "\t\t" (reverse ? emit_to_prsim("tmp") : emit_from_prsim("tmp"));
+	print "\tend // end for";
 	} else {
-		print "\t" (reverse ? emit_to_prsim(p) : emit_from_prsim(p));
+		n = enquote_mem_ref(p);
+		print "\t" (reverse ? emit_to_prsim(n) : emit_from_prsim(n));
 	}
 	}
 	if (match(type, "out")) {
 		good = 1;
 	if (length(u) && length(l)) {
-	for ( ; l<=u; ++l) {
-		n = p "[" l "]";
-		print "\t" (reverse ? emit_from_prsim(n) : emit_to_prsim(n));
-	}
+#	for ( ; l<=u; ++l) {
+#		n = enquote_mem_ref(p "[" l "]");
+#		print "\t" (reverse ? emit_from_prsim(n) : emit_to_prsim(n));
+#	}
+	print "\tfor (i=" l "; i<=" u "; i=i+1) begin";
+		print "\t\t$sformat(tmp, \"." p "[%d]\", i);"
+		print "\t\t" (reverse ? emit_from_prsim("tmp") : emit_to_prsim("tmp"));
+	print "\tend // end for";
 	} else {
-		print "\t" (reverse ? emit_from_prsim(p) : emit_to_prsim(p));
+		n = enquote_mem_ref(p);
+		print "\t" (reverse ? emit_from_prsim(n) : emit_to_prsim(n));
 	}
 	}
 	if (!good) {
@@ -356,8 +478,10 @@ for (p in ports) {
 	ntoks = split(tokenize($0), toks);
 	for (i=1; i<= ntoks; ++i) {
 	if (length(toks[i])) {
-#		parse_debug();
-#		print "token: " toks[i];
+		if (debug) {
+			parse_debug();
+			print "token[:" NR "]: " toks[i];
+		}
 		parse_it(toks[i]);
 	}
 	}
