@@ -1,4 +1,5 @@
 // "standard.v"
+//	$Id: standard.v,v 1.4 2009/07/13 23:28:23 fang Exp $
 // original verilog definitions (e.g. from vendor's standard cell library)
 
 // two-input and-gate
@@ -10,6 +11,19 @@ module AND2 (A1, A2, Z);
     specify
        (A1 => Z)=(5, 3);	// rise and fall times
        (A2 => Z)=(5, 3);
+    endspecify
+endmodule
+`endcelldefine
+
+// N-input and-gate
+`celldefine
+module AND_N (A, Z);
+    parameter input_size = 2;
+    input [input_size-1:0] A;
+    output Z;
+    and	(Z, A);			// plain AND gate
+    specify
+	(A => Z)=(4+input_size, 2+input_size);
     endspecify
 endmodule
 `endcelldefine
