@@ -3,6 +3,16 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2009-07-13	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-83-26:
+	  vpi-prsim.cc: enhanced white-space stripping to remove spaces
+		in the middle of strings passed from verilog, which
+		are often the result of padded string-concatenation.
+	  Added test case using for-loop expanded concatenation.
+	  See also lib/ChangeLog for updates to VPI helper scripts.
+
+
 2009-07-10	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-83-25:
