@@ -1,5 +1,11 @@
 "ChangeLog"
 
+2009-07-13	David Fang	<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-83-26:
+	  configure.ac: date bump
+
+
 2009-05-28	David Fang	<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-83-20:
